commit tree 424811cdcb213453f26510990d3162cb6625b892

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </h1>
   <button id='minus' > ➖ </button>
   <button id='plus' > ➕ </button>
-  <button id='heart' > ❤️ </button>
-  <button id='pause' > pause </button>
+  <button onclick="addLikeToNumber()" id='heart' > ❤️ </button>
+  <button id='pause'> pause </button>
 
   <ul class='likes'></ul>
 
